# ccore

./: .gitattributes  .travis.yml  Makefile  Makefile.am  Makefile.in  README.md  SConstruct  ccoreWIN32.vcxproj  configure  configure.ac  debug.sh  libtool
debian/: changelog  control  copyright  files  libccore-dev.install  libccore1-dev.install  libccore1.install  rules
example/: directory.c  opengl.c
examples/: framebuffer.c  icon.c  icon.h  opengl.c  text.c  window.c
include/ccore/: assert.h  config.h.in  core.h  display.h  error.h  event.h  file.h  gamepad.h  opengl.h  print.h  string.h  sysinfo.h  text.h  thread.h  time.h  types.h  window.h
src/ccore/common/interface/: com_display.c  com_event.c  com_window.c
src/ccore/common/utils/: com_core.c  com_error.c  com_file.c  com_string.c  com_sysinfo.c  com_time.c
src/ccore/gtk3/interface/: gtk3_display.c  gtk3_opengl.c  gtk3_widget.c  gtk3_widget.h  gtk3_window.c  gtk3_window.h
src/ccore/linux/interface/: lin_gamepad.c  lin_gamepad.h  lin_text.c  lin_text.h
src/ccore/linux/utils/: lin_file.c  lin_file.h  lin_sysinfo.c  lin_sysinfo.h  lin_thread.c  lin_thread.h  lin_time.c  lin_time.h
src/ccore/windows/interface/: win_display.c  win_display.h  win_gamepad.c  win_gamepad.h  win_opengl.c  win_window.c  win_window.h
src/ccore/windows/utils/: win_file.c  win_file.h  win_sysinfo.c  win_sysinfo.h  win_thread.c  win_thread.h  win_time.c  win_time.h
src/ccore/x11/interface/: x11_display.c  x11_display.h  x11_opengl.c  x11_text.c  x11_text.h  x11_window.c  x11_window.h
test/: Makefile  test.c
